@@ -70,5 +70,6 @@ configure(subprojects) {
         testLogging {
             exceptionFormat = TestExceptionFormat.FULL
         }
+        listOf("-XX:+EnableDynamicAgentLoading")
     }
 }
