@@ -69,5 +69,6 @@ configure(subprojects) {
         testLogging {
             exceptionFormat = TestExceptionFormat.FULL
         }
+        listOf("-XX:+EnableDynamicAgentLoading")
     }
 }
